--- a/About Us.html
+++ b/About Us.html
@@ -15,14 +15,14 @@
        <p><b>As word spread about their craftsmanship and friendly service, New Republik Barbershop grew beyond its modest beginnings. The duo's commitment to excellence and their vision of creating a welcoming space for everyone fueled their expansion. Today, New Republik Barbershop stands as a testament to their hard work and perseverance, offering a wide range of services while maintaining the personal touch that started it all.</b></p>
         </section>
         <section>
-        <p><b>Conveniently located at Humber College, North Campus in Etobicoke, Ontario, New Republic Barbershop offers a blend of modern style and traditional craftsmanship. Our dedicated team provides expert haircuts, beard trims, and grooming services in a welcoming atmosphere.</b></p>
+        <p><b>Conveniently located at Humber College, North Campus in Etobicoke, Ontario, New Republik Barbershop offers a blend of modern style and traditional craftsmanship. Our dedicated team provides expert haircuts, beard trims, and grooming services in a welcoming atmosphere.</b></p>
 
             <p><b>Operating hours:
             
             Monday to Friday: 10:00am - 6:00pm
             Saturday and Sunday: 12:00pm - 5:00pm</b></p>
             
-            <p><b>For appointments or inquiries, please contact us at 416-123-4567 or email us at newrepublicbarbershop@gmail.com. We look forward to welcoming you soon!</b></p>
+            <p><b>For appointments or inquiries, please contact us at 416-123-4567 or email us at newrepublikbarbershop@gmail.com. We look forward to welcoming you soon!</b></p>
         </section>
 
         <section id="comment-section">
